# dkit

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  install.sh
.github/workflows/: benchmark.yml  ci.yml  miri.yml  release.yml
Formula/: dkit.rb
benches/: conversion_benchmarks.rs  format_benchmarks.rs  query_benchmarks.rs
dev/bench/: data.js
dkit-cli/: Cargo.toml  README.md  build.rs
dkit-cli/src/: cli.rs  config.rs  main.rs
dkit-cli/src/commands/: convert.rs  diff.rs  flatten.rs  join.rs  merge.rs  mod.rs  profile.rs  query.rs  sample.rs  schema.rs  stats.rs  streaming.rs  validate.rs  view.rs  watch.rs
dkit-cli/src/output/: table.rs
dkit-cli/tests/: add_field_test.rs  batch_convert_test.rs  convert_test.rs  diff_test.rs  encoding_test.rs  map_field_test.rs  markdown_test.rs  parquet_test.rs  schema_test.rs  sqlite_test.rs  stats_test.rs  stdin_pipeline_test.rs  time_explain_test.rs  tsv_test.rs  v030_integration_test.rs  v040_xml_jsonl_integration_test.rs  v050_integration_test.rs  v060_integration_test.rs  v070_integration_test.rs  v080_integration_test.rs  v100_qa_test.rs  v110_integration_test.rs  v120_integration_test.rs  v130_integration_test.rs  v140_integration_test.rs  v150_integration_test.rs  xlsx_test.rs
dkit-cli/tests/fixtures/: config.toml  mixed_types.json  orders.csv  orders.json  profile_data.csv  sales.json  sample.env  single.json  timeseries.json  unicode.csv  users.json  users.jsonl  users.tsv  users.xlsx  users2.json  users_with_id.json
dkit-core/: Cargo.toml  README.md
dkit-core/benches/: conversion_benchmarks.rs  format_benchmarks.rs  query_benchmarks.rs
dkit-core/src/: error.rs  lib.rs  value.rs
dkit-core/src/format/: csv.rs  env.rs  hcl.rs  html.rs  ini.rs  json.rs  log.rs  markdown.rs  mod.rs  msgpack.rs  parquet.rs  plist.rs  properties.rs  sqlite.rs  template.rs  toml.rs  yaml.rs
dkit-core/src/query/: evaluator.rs  filter.rs  functions.rs  mod.rs  parser.rs
docs/: api-reference.md  architecture.md  cli-spec.md  cookbook.md  migration.md  query-syntax.md  roadmap.md  technical-spec.md  tutorial.md
fuzz/: Cargo.toml
fuzz/corpus/fuzz_csv/: users2.csv
fuzz/corpus/fuzz_json/: employees.json
fuzz/corpus/fuzz_query/: complex  functions  group_by  index_range  nested_path  select_clause  sort_limit  where_clause
fuzz/corpus/fuzz_yaml/: config2.yaml
fuzz/fuzz_targets/: fuzz_csv.rs  fuzz_json.rs  fuzz_jsonl.rs  fuzz_query.rs  fuzz_toml.rs  fuzz_yaml.rs
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  value.rs
src/commands/: convert.rs  diff.rs  flatten.rs  merge.rs  mod.rs  query.rs  sample.rs  schema.rs  stats.rs  streaming.rs  validate.rs  view.rs
src/format/: csv.rs  html.rs  json.rs  jsonl.rs  mod.rs  parquet.rs  sqlite.rs  toml.rs  xlsx.rs  xml.rs  yaml.rs
src/output/: mod.rs  pretty.rs  table.rs
src/query/: evaluator.rs  filter.rs  functions.rs  mod.rs  parser.rs
tests/: batch_convert_test.rs  config_test.rs  convert_test.rs  fixture_test.rs  markdown_test.rs  merge_test.rs  parquet_test.rs  query_test.rs  schema_test.rs  sqlite_test.rs  stats_test.rs  tsv_test.rs  v020_integration_test.rs  v030_integration_test.rs  v040_xml_jsonl_integration_test.rs  v070_integration_test.rs  v090_integration_test.rs  view_test.rs  watch_test.rs  xlsx_test.rs
tests/fixtures/: config.xml  config.yaml  nested.json  quoted.csv  users.xml
