[package]
name = "dkit"
version = "0.1.0"
edition = "2021"
description = "Swiss army knife for data format conversion and querying"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }
comfy-table = "7"
colored = "2"
thiserror = "1"
anyhow = "1"
