[package]
name = "dkit"
version = "0.4.0"
edition = "2021"
description = "Swiss army knife for data format conversion and querying"
license = "MIT"
repository = "https://github.com/syangkkim/dkit"
homepage = "https://github.com/syangkkim/dkit"
keywords = ["cli", "json", "csv", "yaml", "toml"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
toml = "0.8"
quick-xml = "0.37"
rmp-serde = "1"
indexmap = { version = "2", features = ["serde"] }
comfy-table = "7"
colored = "2"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
