[package]
name = "dkit"
version = "0.7.0"
edition = "2021"
description = "Swiss army knife for data format conversion and querying"
license = "MIT"
repository = "https://github.com/syangkkim/dkit"
homepage = "https://github.com/syangkkim/dkit"
keywords = ["cli", "json", "csv", "yaml", "toml"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
toml = "0.8"
quick-xml = "0.37"
rmp-serde = "1"
indexmap = { version = "2", features = ["serde"] }
comfy-table = "7"
colored = "2"
thiserror = "1"
anyhow = "1"
encoding_rs = "0.8"
chardetng = "0.1"
calamine = "0.26"
rusqlite = { version = "0.31", features = ["bundled"] }
arrow = { version = "53", default-features = false, features = ["prettyprint"] }
parquet = { version = "53", default-features = false, features = ["arrow", "snap", "zstd"] }
bytes = "1"
glob = "0.3"
jsonschema = { version = "0.17", default-features = false }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
arrow = { version = "53", default-features = false }
parquet = { version = "53", default-features = false, features = ["arrow"] }
