[package]
name = "dkit"
version = "1.2.0"
edition = "2021"
rust-version = "1.75.0"
description = "A unified CLI to convert, query, and explore data across formats"
license = "MIT"
repository = "https://github.com/syangkkim/dkit"
homepage = "https://github.com/syangkkim/dkit"
keywords = ["cli", "data-format", "converter", "query", "json"]
categories = ["command-line-utilities", "encoding"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/dkit-v{ version }-{ target }{ archive-suffix }"
bin-dir = "dkit{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[features]
default = []
xml = ["dkit-core/xml"]
msgpack = ["dkit-core/msgpack"]
excel = ["dkit-core/excel"]
sqlite = ["dkit-core/sqlite"]
parquet = ["dkit-core/parquet", "dep:arrow", "dep:parquet-impl", "dep:bytes"]
hcl = ["dkit-core/hcl"]
all = ["xml", "msgpack", "excel", "sqlite", "parquet", "hcl"]

[dependencies]
dkit-core = { version = "1.2.0", path = "../dkit-core" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }
comfy-table = "7"
colored = "2"
thiserror = "1"
anyhow = "1"
encoding_rs = "0.8"
chardetng = "0.1"
arrow = { version = "53", default-features = false, features = ["prettyprint"], optional = true }
parquet-impl = { package = "parquet", version = "53", default-features = false, features = ["arrow", "snap", "zstd"], optional = true }
bytes = { version = "1", optional = true }
glob = "0.3"
jsonschema = { version = "0.17", default-features = false }
dirs = "6.0.0"
notify = "7"
ctrlc = { version = "3", features = ["termination"] }
miette = { version = "7", features = ["fancy"] }
rand = "0.8"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
arrow = { version = "53", default-features = false }
parquet-impl = { package = "parquet", version = "53", default-features = false, features = ["arrow"] }
