[package]
name = "dkit-core"
version = "0.9.0"
edition = "2021"
rust-version = "1.75.0"
description = "Core library for dkit — data format conversion and querying engine"
license = "MIT"
repository = "https://github.com/syangkkim/dkit"
homepage = "https://github.com/syangkkim/dkit"
keywords = ["json", "csv", "yaml", "toml", "data"]
categories = ["encoding", "parser-implementations"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
toml = "0.8"
quick-xml = "0.37"
rmp-serde = "1"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"
anyhow = "1"
calamine = "0.26"
rusqlite = { version = "0.31", features = ["bundled"] }
arrow = { version = "53", default-features = false, features = ["prettyprint"] }
parquet = { version = "53", default-features = false, features = ["arrow", "snap", "zstd"] }
bytes = "1"
jsonschema = { version = "0.17", default-features = false }
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "format_benchmarks"
harness = false

[[bench]]
name = "query_benchmarks"
harness = false

[[bench]]
name = "conversion_benchmarks"
harness = false
