[package]
name = "dkit-core"
version = "1.2.0"
edition = "2021"
rust-version = "1.75.0"
description = "Core library for dkit — data format conversion and querying engine"
license = "MIT"
repository = "https://github.com/syangkkim/dkit"
homepage = "https://github.com/syangkkim/dkit"
keywords = ["data-format", "converter", "query", "serialization", "json"]
categories = ["encoding", "parser-implementations"]

[features]
default = []
xml = ["dep:quick-xml"]
msgpack = ["dep:rmp-serde"]
excel = ["dep:calamine"]
sqlite = ["dep:rusqlite"]
parquet = ["dep:arrow", "dep:parquet-impl", "dep:bytes"]
hcl = ["dep:hcl-rs"]
plist = ["dep:plist", "dep:base64"]
all = ["xml", "msgpack", "excel", "sqlite", "parquet", "hcl", "plist"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
toml = "0.8"
quick-xml = { version = "0.37", optional = true }
rmp-serde = { version = "1", optional = true }
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"
anyhow = "1"
calamine = { version = "0.26", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
arrow = { version = "53", default-features = false, features = ["prettyprint"], optional = true }
parquet-impl = { package = "parquet", version = "53", default-features = false, features = ["arrow", "snap", "zstd"], optional = true }
bytes = { version = "1", optional = true }
hcl-rs = { version = "0.19", optional = true }
plist = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
jsonschema = { version = "0.17", default-features = false }
rand = "0.8"
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "format_benchmarks"
harness = false

[[bench]]
name = "query_benchmarks"
harness = false

[[bench]]
name = "conversion_benchmarks"
harness = false
